# esp_Project

1.LED/: CMakeLists.txt
1.LED/main/: CMakeLists.txt  main.c
2.KEY/: sdkconfig
2.KEY-EXIT/: CMakeLists.txt  sdkconfig
2.KEY-EXIT/components/BSP/: CMakeLists.txt
2.KEY-EXIT/components/BSP/key/: key.c  key.h
2.KEY-EXIT/components/chip/: CMakeLists.txt
2.KEY-EXIT/main/: CMakeLists.txt  main.c
2.KEY/components/BSP/key/: key.c  key.h
2.KEY/main/: main.c
3.UART/: sdkconfig
3.UART/components/BSP/led/: led.c  led.h
3.UART/main/: main.c
4.Queue/: sdkconfig
4.Queue/components/BSP/: CMakeLists.txt
4.Queue/components/BSP/uart/: uart.c  uart.h
4.Queue/components/queue/: user_queue.c  user_queue.h
4.Queue/components/tasks/: CMakeLists.txt
4.Queue/components/tasks/task1/: task1.c  task1.h
4.Queue/components/tasks/task2/: task2.c  task2.h
4.Queue/components/tasks/task3/: task3.c  task3.h
4.Queue/components/tasks/taskInit/: user_task.c
4.Queue/main/: CMakeLists.txt  main.c
5.Queue-EXIT/components/BSP/: CMakeLists.txt
5.Queue-EXIT/components/BSP/key/: key.c
5.Queue-EXIT/components/user_queue/: CMakeLists.txt  user_queue.c
5.Queue-EXIT/components/user_task/task1/: task1.c
5.Queue-EXIT/components/user_task/task2/: task2.c
5.Queue-EXIT/components/user_task/task3/: task3.c  task3.h
5.Queue-EXIT/components/user_task/taskInit/: user_task.c  (+1 more)
6.SysTimer/components/BSP/: CMakeLists.txt
6.SysTimer/components/user_queue/: user_queue.c  user_queue.h
6.SysTimer/components/user_task/: CMakeLists.txt
6.SysTimer/main/: CMakeLists.txt  main.c
(+12 files in other folders)
